--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>OilPower</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link  href="style.css" rel="stylesheet" type="text/css">
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css"> -->
@@ -15,31 +16,31 @@
        <div>
          <p class="cataloge-main-p">Каталог</p>
         <ul class="cataloge-breadcrumb">
-          <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
+          <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <!-- <li><a href="#">Библиотека</a> <span class="divider">/</span></li> -->
-          <li class="cataloge-breadcrumb-active">Каталог</li>
+          <li class="cataloge-breadcrumb__li">Каталог</li>
         </ul>
        </div>
         <div class="cataloge-cards">
             <a href="#"class="cataloge-cards__elem">
-              <img src="image/catalog/image-card1.png" class="cataloge-cards-image">
+              <img src="image/catalog/image-card1.png" class="cataloge-cards__image">
                 <span class="cataloge-cards__body" >Фитинги</span>
             </a>
               <a href="#" class="cataloge-cards__elem">
                 
-                <img src="image/catalog/image-card2.png" class="cataloge-cards-image">
+                <img src="image/catalog/image-card2.png" class="cataloge-cards__image">
                   <span class="cataloge-cards__body" >Соединения БРС</span>
               </a>
             <a href="#" class="cataloge-cards__elem">
-              <img src="image/catalog/image-card3.png" class="cataloge-cards-image">
+              <img src="image/catalog/image-card3.png" class="cataloge-cards__image">
                 <span class="cataloge-cards__body" >Шаровые краны</span>
             </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/catalog/image-card4.png" class="cataloge-cards-image">
+            <img src="image/catalog/image-card4.png" class="cataloge-cards__image">
               <span class="cataloge-cards__body" >Гидравлическая аппаратура</span>
           </a>
             <a href="#" class="cataloge-cards__elem">
-              <img src="image/catalog/image-card5.png" class="cataloge-cards-image">
+              <img src="image/catalog/image-card5.png" class="cataloge-cards__image">
                 <span class="cataloge-cards__body" >Гидрораспределители</span>
             </a>
       </div>
