--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>OilPower</title>
 	<link  href="style.css" rel="stylesheet" type="text/css">
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
@@ -13,39 +14,39 @@
       <div class="breadcrumb-container">
           <p class="cataloge-main-p">Каталог</p>
         <ul class="cataloge-breadcrumb">
-          <li><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
-          <li><a href="#">Каталог</a> <span class="divider">/</span></li>
-          <li class="cataloge-breadcrumb-active">Соединение БРС</li>
+          <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
+          <li class="cataloge-breadcrumb__li"><a href="#">Каталог</a> <span class="divider">/</span></li>
+          <li class="cataloge-breadcrumb__li">Соединение БРС</li>
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
+        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Фитинги</a></div>
+        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Соединение БРС</a></div>
+        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Шаровые краны</a></div>
+        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar-div__bottom"><a href="#" class="shop-sidebar-div-a">Гидрораспределители</a></div>
         </div>
-      <div class="main-content body-container">
+      <div class="body-container">
         <div class="shop-cards">
           <a href="#"class="cataloge-cards__elem">
-            <img src="image/shop/image-card1.png" class="cataloge-cards-image">
+            <img src="image/shop/image-card1.png" class="cataloge-cards__image">
               <span class="cataloge-cards__body" >Гидравлические iso-7241a</span>
           </a>
             <a href="#" class="cataloge-cards__elem">
               
-              <img src="image/shop/image-card2.png" class="cataloge-cards-image">
+              <img src="image/shop/image-card2.png" class="cataloge-cards__image">
                 <span class="cataloge-cards__body" >Гидравлические iso-16028</span>
             </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/shop/image-card3.png" class="cataloge-cards-image">
+            <img src="image/shop/image-card3.png" class="cataloge-cards__image">
               <span class="cataloge-cards__body" >Гидравлические резьбовые</span>
           </a>
         <a href="#" class="cataloge-cards__elem">
-          <img src="image/shop/image-card4.png" class="cataloge-cards-image">
+          <img src="image/shop/image-card4.png" class="cataloge-cards__image">
             <span class="cataloge-cards__body" >Резьбовые 700 bar</span>
         </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/shop/image-card5.png" class="cataloge-cards-image">
+            <img src="image/shop/image-card5.png" class="cataloge-cards__image">
               <span class="cataloge-cards__body" >Гидравлические серии vep</span>
           </a>
     </div>
