--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -14,7 +14,7 @@
 <body>
     <div class="body-container">
        <div>
-         <p class="cataloge-main-p">Каталог</p>
+         <p class="cataloge-main__p">Каталог</p>
         <ul class="cataloge-breadcrumb">
           <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <!-- <li><a href="#">Библиотека</a> <span class="divider">/</span></li> -->
