--- a/OilPower/more.html
+++ b/OilPower/more.html
@@ -11,7 +11,7 @@
 </html> 
 <body>
     <div class="body-container">
-        <p class="cataloge-main-p">Резьбовые БРС на 700 bar 3/8 дюйма</p>
+        <p class="cataloge-main__p">Резьбовые БРС на 700 bar 3/8 дюйма</p>
       <ul class="cataloge-breadcrumb">
         <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
         <li class="cataloge-breadcrumb__li"><a href="catalog.html">Каталог</a> <span class="divider">/</span></li>
@@ -21,33 +21,33 @@
       </ul>
     </div>
     <div class="shop-sidebar">
-      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
-      <div class="shop-sidebar-div-active"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
-      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-7241a</a></div>
-      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-16028</a></div>
-      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические резьбовые БРС</a></div>
-      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Резьбовые БРС 700 bar</a></div>
-      <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические серии vep</a></div>
-      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
-      <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
-      <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
+      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Фитинги</a></div>
+      <div class="shop-sidebar__elem_active"><a class="shop-sidebar__elem_a">Соединение БРС</a></div>
+      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-7241a</a></div>
+      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-16028</a></div>
+      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические резьбовые БРС</a></div>
+      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Резьбовые БРС 700 bar</a></div>
+      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические серии vep</a></div>
+      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Шаровые краны</a></div>
+      <div class="shop-sidebar__elem_"><a class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
+      <div class="shop-sidebar__elem_bottom"><a class="shop-sidebar__elem_a">Гидрораспределители</a></div>
       </div>
     <div class="main-content body-container">
         <div class="more-card">
             <img src="image/more/more-card1.png" class="more-card__image">
-            <div class="more-card__body">
-                <h3>Обратный клапан <br>CV-02 G1/4 (VUR;VU;FPR;Ft257;CVU-M)</h3>
+            <div class="more-card_body">
+                <h3 class="more-card_body__h3-span">Обратный клапан <br>CV-02 G1/4 (VUR;VU;FPR;Ft257;CVU-M)</h3>
                <div class="more-content__div">
-                 <a>Размер тела</a><div id="more-div__line-one"></div><a>1/2 дм</a>
+                 <a>Размер тела</a><div class="more-div__line-one"></div><a>1/2 дм</a>
                 </div>
                 <div class="more-content__div">
-                  <a>Номинальное <br> давление</a><div id="more-div__line-one"></div><a> 690 bar</a>
+                  <a>Номинальное <br> давление</a><div class="more-div__line-one"></div><a> 690 bar</a>
                  </div>
                  <div class="more-content__div">
-                  <a>Номинальный <br> поток </a><div id="more-div__line-one"></div><a>  54 л/мин</a>
+                  <a>Номинальный <br> поток </a><div class="more-div__line-one"></div><a>  54 л/мин</a>
                  </div>
                  <div class="more-content__div">
-                  <a>Номинальное <br> давление </a><div id="more-div__line-one"></div><a>  690 bar</a>
+                  <a>Номинальное <br> давление </a><div class="more-div__line-one"></div><a>  690 bar</a>
                  </div>
                 <!-- <span>Номинальное <br> давление <div id="more-card-div__one"></div>  690 bar</span><br><br>
                 <span>Номинальный <br> поток <div id="more-card-div__one"></div> 54 л/мин</span><br><br>
@@ -61,13 +61,13 @@
         </div>
         <div class="body-container more-content">
           <h2>Описание</h2>
-          <p>Резьбовое гидравлическое быстроразъемное соединение (БРС) серии HPA для инструмента на высокое давление 3/8 дюйма</p>
+          <p class="more-content__p">Резьбовое гидравлическое быстроразъемное соединение (БРС) серии HPA для инструмента на высокое давление 3/8 дюйма</p>
           <br><br>
           <h2>Область применения</h2>
-          <p>Муфты серии TGW предназначены для использования в строительно-дорожной технике, в частности гидромолотах, в составе передвижного оборудования, а также сельскохозяйственного и универсального промышленного оборудования.</p>
+          <p class="more-content__p">Муфты серии TGW предназначены для использования в строительно-дорожной технике, в частности гидромолотах, в составе передвижного оборудования, а также сельскохозяйственного и универсального промышленного оборудования.</p>
           <br><br>
           <h2>Особенности Муфты серии TGW </h2>
-          <p>Новое клапанное исполнение позволяет избежать повреждений при высокой интенсивности потока и возникновении сильных импульсов, тем самым обеспечивая лучшие эксплуатационные показатели.
+          <p class="more-content__p">Новое клапанное исполнение позволяет избежать повреждений при высокой интенсивности потока и возникновении сильных импульсов, тем самым обеспечивая лучшие эксплуатационные показатели.
               <br><br>
             Производятся из цельного стального прута, что обеспечивает дополнительную прочность.
             В серии KZE-BA используется резьбовой механизм блокировки муфты, сопрягающийся с соответствующими резьбой на ниппеле. Две половины должны быть вручную соединены резьбовым соединением.
