--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -12,7 +12,7 @@
 <body>
     <div class="">
       <div class="breadcrumb-container">
-          <p class="cataloge-main-p">Резьбовые БРС 700 bar</p>
+          <p class="cataloge-main__p">Резьбовые БРС 700 bar</p>
         <ul class="cataloge-breadcrumb">
           <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <li class="cataloge-breadcrumb__li"><a href="catalog.html">Каталог</a> <span class="divider">/</span></li>
@@ -21,16 +21,16 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Фитинги</a></div>
-        <div class="shop-sidebar-div-active"><a class="shop-sidebar-div-a">Соединение БРС</a></div>
-        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-7241a</a></div>
-        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические БРС iso-16028</a></div>
-        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические резьбовые БРС</a></div>
-        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Резьбовые БРС 700 bar</a></div>
-        <div class="shop-sidebar-div-more"><a class="shop-sidebar-div-a">Гидравлические серии vep</a></div>
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Шаровые краны</a></div>
-        <div class="shop-sidebar-div"><a class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar-div__bottom"><a class="shop-sidebar-div-a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Фитинги</a></div>
+        <div class="shop-sidebar__elem_active"><a class="shop-sidebar__elem_a">Соединение БРС</a></div>
+        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-7241a</a></div>
+        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-16028</a></div>
+        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические резьбовые БРС</a></div>
+        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Резьбовые БРС 700 bar</a></div>
+        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические серии vep</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Шаровые краны</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar__elem_bottom"><a class="shop-sidebar__elem_a">Гидрораспределители</a></div>
         </div>
       <div class="main-content body-container">
         <div class="shop-cards">
@@ -39,7 +39,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards__body">
+            <div class="shopmore-cards_body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
@@ -53,7 +53,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards__body">
+            <div class="shopmore-cards_body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
@@ -67,7 +67,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards__body">
+            <div class="shopmore-cards_body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
