--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -12,7 +12,7 @@
 <body>
     <div class="">
       <div class="breadcrumb-container">
-          <p class="cataloge-main-p">Каталог</p>
+          <p class="cataloge-main__p">Каталог</p>
         <ul class="cataloge-breadcrumb">
           <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
           <li class="cataloge-breadcrumb__li"><a href="#">Каталог</a> <span class="divider">/</span></li>
@@ -20,11 +20,11 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Фитинги</a></div>
-        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Соединение БРС</a></div>
-        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Шаровые краны</a></div>
-        <div class="shop-sidebar-div"><a href="#" class="shop-sidebar-div-a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar-div__bottom"><a href="#" class="shop-sidebar-div-a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Фитинги</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Соединение БРС</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Шаровые краны</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar__elem_bottom"><a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a></div>
         </div>
       <div class="body-container">
         <div class="shop-cards">
