--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -12,7 +12,7 @@
 </head>
 </html> 
 <body>
-    <div class="body-container">
+    <div class="body-container cataloge-main">
        <div>
          <p class="cataloge-main__p">Каталог</p>
         <ul class="cataloge-breadcrumb">
