--- a/OilPower/more.html
+++ b/OilPower/more.html
@@ -10,8 +10,8 @@
 </head>
 </html> 
 <body>
-    <div class="body-container">
-        <p class="cataloge-main__p">Резьбовые БРС на 700 bar 3/8 дюйма</p>
+    <div class="body-container cataloge-main">
+        <p class="cataloge-main__p ">Резьбовые БРС на 700 bar 3/8 дюйма</p>
       <ul class="cataloge-breadcrumb">
         <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
         <li class="cataloge-breadcrumb__li"><a href="catalog.html">Каталог</a> <span class="divider">/</span></li>
