--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -11,7 +11,7 @@
 </html> 
 <body>
     <div class="">
-      <div class="breadcrumb-container">
+      <div class="breadcrumb-container cataloge-main">
           <p class="cataloge-main__p">Резьбовые БРС 700 bar</p>
         <ul class="cataloge-breadcrumb">
           <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
@@ -39,7 +39,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards_body">
+            <div class="shopmore-cards__body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
@@ -53,7 +53,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards_body">
+            <div class="shopmore-cards__body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
@@ -67,7 +67,7 @@
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <h3 class="shopmore-cards__h3 ">Резьбовые БРС <br>700 bar 3/8 дюйма</h3>
             </div>
-            <div class="shopmore-cards_body">
+            <div class="shopmore-cards__body">
             <span>Размер тела</span><span>3/8дм</span>
             <span>Номинальное давление</span><span>700 bar</span>
             <span>Номинальный поток</span><span>28 л/мин</span>
