--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -11,7 +11,7 @@
 </html> 
 <body>
     <div class="">
-      <div class="breadcrumb-container">
+      <div class="breadcrumb-container cataloge-main">
           <p class="cataloge-main__p">Каталог</p>
         <ul class="cataloge-breadcrumb">
           <li class="cataloge-breadcrumb__li"><a href="#" class="cataloge-breadcrumb-black">Главная</a> <span class="cataloge-breadcrumb-bread">/</span></li>
@@ -27,7 +27,7 @@
         <div class="shop-sidebar__elem_bottom"><a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a></div>
         </div>
       <div class="body-container">
-        <div class="shop-cards">
+        <div class="shop-cards cataloge-cards-div">
           <a href="#"class="cataloge-cards__elem">
             <img src="image/shop/image-card1.png" class="cataloge-cards__image">
               <span class="cataloge-cards__body" >Гидравлические iso-7241a</span>
