--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -21,19 +21,19 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Фитинги</a></div>
-        <div class="shop-sidebar__elem_active"><a class="shop-sidebar__elem_a">Соединение БРС</a></div>
-        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-7241a</a></div>
-        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-16028</a></div>
-        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические резьбовые БРС</a></div>
-        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Резьбовые БРС 700 bar</a></div>
-        <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические серии vep</a></div>
-        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Шаровые краны</a></div>
-        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar__elem_bottom"><a class="shop-sidebar__elem_a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Фитинги</a></div>
+        <div class="shop-sidebar__elem-active"><a class="shop-sidebar__elem-a">Соединение БРС</a></div>
+        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-7241a</a></div>
+        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-16028</a></div>
+        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические резьбовые БРС</a></div>
+        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Резьбовые БРС 700 bar</a></div>
+        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические серии vep</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Шаровые краны</a></div>
+        <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar__elem-bottom"><a class="shop-sidebar__elem-a">Гидрораспределители</a></div>
         </div>
-      <div class="main-content body-container">
-        <div class="shop-cards">
+      <div class="body-container">
+        <div class="shopmore-cards">
           <div href="#"class="shopmore-cards__elem">
             <div>
             <img src="image/shop/image-card4.png" class="cataloge-cards-image">
