--- a/OilPower/more.html
+++ b/OilPower/more.html
@@ -21,22 +21,22 @@
       </ul>
     </div>
     <div class="shop-sidebar">
-      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Фитинги</a></div>
-      <div class="shop-sidebar__elem_active"><a class="shop-sidebar__elem_a">Соединение БРС</a></div>
-      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-7241a</a></div>
-      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические БРС iso-16028</a></div>
-      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические резьбовые БРС</a></div>
-      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Резьбовые БРС 700 bar</a></div>
-      <div class="shop-sidebar__elem_more"><a class="shop-sidebar__elem_a">Гидравлические серии vep</a></div>
-      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem_a">Шаровые краны</a></div>
-      <div class="shop-sidebar__elem_"><a class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
-      <div class="shop-sidebar__elem_bottom"><a class="shop-sidebar__elem_a">Гидрораспределители</a></div>
+      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Фитинги</a></div>
+      <div class="shop-sidebar__elem-active"><a class="shop-sidebar__elem-a">Соединение БРС</a></div>
+      <div class="shop-sidebar__elem-more shop-sidebar__elem"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-7241a</a></div>
+      <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-16028</a></div>
+      <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические резьбовые БРС</a></div>
+      <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Резьбовые БРС 700 bar</a></div>
+      <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические серии vep</a></div>
+      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Шаровые краны</a></div>
+      <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Гидравлическая аппаратура</a></div>
+      <div class="shop-sidebar__elem-bottom"><a class="shop-sidebar__elem-a">Гидрораспределители</a></div>
       </div>
     <div class="main-content body-container">
         <div class="more-card">
             <img src="image/more/more-card1.png" class="more-card__image">
-            <div class="more-card_body">
-                <h3 class="more-card_body__h3-span">Обратный клапан <br>CV-02 G1/4 (VUR;VU;FPR;Ft257;CVU-M)</h3>
+            <div class="more-card__body">
+                <h3 class="more-card__body-h3-span">Обратный клапан <br>CV-02 G1/4 (VUR;VU;FPR;Ft257;CVU-M)</h3>
                <div class="more-content__div">
                  <a>Размер тела</a><div class="more-div__line-one"></div><a>1/2 дм</a>
                 </div>
@@ -78,7 +78,7 @@
             <br><br>
             <h2>Техническая схема</h2>
             <div>
-            <img class="more-content__img__elem" src="image/more/image-more1.png">
+            <img class="more-content__img-elem" src="image/more/image-more1.png">
             <img class="more-content__img" src="image/more/image-more2.png"> <img class="more-content__img"src="image/more/image-more3.png">
             </div>
         </div>
