--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -20,11 +20,11 @@
         </ul>
       </div>
       <div class="shop-sidebar">
-        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Фитинги</a></div>
-        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Соединение БРС</a></div>
-        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Шаровые краны</a></div>
-        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem_a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar__elem_bottom"><a href="#" class="shop-sidebar__elem_a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Фитинги</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Соединение БРС</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Шаровые краны</a></div>
+        <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Гидравлическая аппаратура</a></div>
+        <div class="shop-sidebar__elem-bottom"><a href="#" class="shop-sidebar__elem-a">Гидрораспределители</a></div>
         </div>
       <div class="body-container">
         <div class="shop-cards cataloge-cards-div">
