--- a/OilPower/catalog.html
+++ b/OilPower/catalog.html
@@ -23,24 +23,24 @@
        </div>
         <div class="cataloge-cards">
             <a href="#"class="cataloge-cards__elem">
-              <img src="image/catalog/image-card1.png" class="cataloge-cards__image">
+              <img src="image/catalog/image-card1.png" class="cataloge-cards-image">
                 <span class="cataloge-cards__body" >Фитинги</span>
             </a>
               <a href="#" class="cataloge-cards__elem">
                 
-                <img src="image/catalog/image-card2.png" class="cataloge-cards__image">
+                <img src="image/catalog/image-card2.png" class="cataloge-cards-image">
                   <span class="cataloge-cards__body" >Соединения БРС</span>
               </a>
             <a href="#" class="cataloge-cards__elem">
-              <img src="image/catalog/image-card3.png" class="cataloge-cards__image">
+              <img src="image/catalog/image-card3.png" class="cataloge-cards-image">
                 <span class="cataloge-cards__body" >Шаровые краны</span>
             </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/catalog/image-card4.png" class="cataloge-cards__image">
+            <img src="image/catalog/image-card4.png" class="cataloge-cards-image">
               <span class="cataloge-cards__body" >Гидравлическая аппаратура</span>
           </a>
             <a href="#" class="cataloge-cards__elem">
-              <img src="image/catalog/image-card5.png" class="cataloge-cards__image">
+              <img src="image/catalog/image-card5.png" class="cataloge-cards-image">
                 <span class="cataloge-cards__body" >Гидрораспределители</span>
             </a>
       </div>
