--- a/OilPower/shop.html
+++ b/OilPower/shop.html
@@ -19,34 +19,34 @@
           <li class="cataloge-breadcrumb__li">Соединение БРС</li>
         </ul>
       </div>
+      <div class="body-container">
       <div class="shop-sidebar">
         <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Фитинги</a></div>
         <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Соединение БРС</a></div>
         <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Шаровые краны</a></div>
         <div class="shop-sidebar__elem"><a href="#" class="shop-sidebar__elem-a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar__elem-bottom"><a href="#" class="shop-sidebar__elem-a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem--bottom"><a href="#" class="shop-sidebar__elem-a">Гидрораспределители</a></div>
         </div>
-      <div class="body-container">
         <div class="shop-cards cataloge-cards-div">
           <a href="#"class="cataloge-cards__elem">
-            <img src="image/shop/image-card1.png" class="cataloge-cards__image">
+            <img src="image/shop/image-card1.png" class="cataloge-cards-image">
               <span class="cataloge-cards__body" >Гидравлические iso-7241a</span>
           </a>
             <a href="#" class="cataloge-cards__elem">
               
-              <img src="image/shop/image-card2.png" class="cataloge-cards__image">
+              <img src="image/shop/image-card2.png" class="cataloge-cards-image">
                 <span class="cataloge-cards__body" >Гидравлические iso-16028</span>
             </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/shop/image-card3.png" class="cataloge-cards__image">
+            <img src="image/shop/image-card3.png" class="cataloge-cards-image">
               <span class="cataloge-cards__body" >Гидравлические резьбовые</span>
           </a>
         <a href="#" class="cataloge-cards__elem">
-          <img src="image/shop/image-card4.png" class="cataloge-cards__image">
+          <img src="image/shop/image-card4.png" class="cataloge-cards-image">
             <span class="cataloge-cards__body" >Резьбовые 700 bar</span>
         </a>
           <a href="#" class="cataloge-cards__elem">
-            <img src="image/shop/image-card5.png" class="cataloge-cards__image">
+            <img src="image/shop/image-card5.png" class="cataloge-cards-image">
               <span class="cataloge-cards__body" >Гидравлические серии vep</span>
           </a>
     </div>
