--- a/OilPower/shop-more.html
+++ b/OilPower/shop-more.html
@@ -20,19 +20,20 @@
           <li class="cataloge-breadcrumb__li">Резьбовые БРС 700 bar</li>
         </ul>
       </div>
+      <div class="body-container">
       <div class="shop-sidebar">
         <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Фитинги</a></div>
-        <div class="shop-sidebar__elem-active"><a class="shop-sidebar__elem-a">Соединение БРС</a></div>
-        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-7241a</a></div>
-        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-16028</a></div>
-        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические резьбовые БРС</a></div>
-        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Резьбовые БРС 700 bar</a></div>
-        <div class="shop-sidebar__elem-more"><a class="shop-sidebar__elem-a">Гидравлические серии vep</a></div>
+        <div class=" shop-sidebar__elem--active"><a class="shop-sidebar__elem-a">Соединение БРС</a></div>
+        <div class="shop-sidebar__elem--more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-7241a</a></div>
+        <div class="shop-sidebar__elem--more"><a class="shop-sidebar__elem-a">Гидравлические БРС iso-16028</a></div>
+        <div class="shop-sidebar__elem--more"><a class="shop-sidebar__elem-a">Гидравлические резьбовые БРС</a></div>
+        <div class=" shop-sidebar__elem--more"><a class="shop-sidebar__elem-a">Резьбовые БРС 700 bar</a></div>
+        <div class=" shop-sidebar__elem--more"><a class="shop-sidebar__elem-a">Гидравлические серии vep</a></div>
+        
         <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Шаровые краны</a></div>
         <div class="shop-sidebar__elem"><a class="shop-sidebar__elem-a">Гидравлическая аппаратура</a></div>
-        <div class="shop-sidebar__elem-bottom"><a class="shop-sidebar__elem-a">Гидрораспределители</a></div>
+        <div class="shop-sidebar__elem--bottom"><a class="shop-sidebar__elem-a">Гидрораспределители</a></div>
         </div>
-      <div class="body-container">
         <div class="shopmore-cards">
           <div href="#"class="shopmore-cards__elem">
             <div>
