--- a/Afclub/index.html
+++ b/Afclub/index.html
@@ -77,6 +77,12 @@
         <div class="card-BodyText">Каждую неделю Вас ожидают: Мафия, Бункер, День сложных игр, Субботний рейд и многое другое!</div>
       </div>
     </div>
+    <div class="divSignUp">
+      <a class="buttonSignUp">ЗАПИСАТЬСЯ</a>
+    </div>
+</div>
+<div id="Zons" class="container">
+
 </div>
 
     <script src="js/script.js"></script>
